--- a/html/changelogs/changelog20181.html
+++ b/html/changelogs/changelog20181.html
@@ -148,13 +148,13 @@ should be listed in the changelog upon commit though. Thanks. -->
 	<h2 class='date'>December 28 2018</h2>
 	<h3 class='author'>Neth Iafin updated:</h3>
 	<ul class='changes bgimages16'>
-		<li class='experiment'>This is hopefully the last patch before we let the meta around marine weapons to settle.</li>		
+		<li class='experiment'>This is hopefully the last patch before we let the meta around marine weapons to settle.</li>
 		<li class='tweak'>Reverted old SMG burstfire delay. Given SMG single shot and burst shot instead a flat 10% delay. This is done istead of nerfing SMGs damage by same amount.</li>
 		<li class='tweak'>Slug damage and armor penetration increased.</li>
 		<li class='tweak'>Barrel charger now works on secondary pellets. No other shotgun buffs were deemed necessarry per recent tests.</li>
 		<li class='tweak'>Gave ability to control Xeno evolution speed. For now just for dev+ staff.</li>
 	</ul>
-</div>	
+</div>
 
 <div class='commit sansserif'>
 	<h2 class='date'>December 27 2018</h2>
@@ -171,7 +171,7 @@ should be listed in the changelog upon commit though. Thanks. -->
 		<li class='tweak'>Removed fire delay from SMG stock (not other stocks though).</li>
 		<li class='tweak'>Buffed Predator's bullet resistance since they have different way of applying armor than Xenomorphs.</li>
 	</ul>
-</div>	
+</div>
 
 <div class='commit sansserif'>
 	<h2 class='date'>December 26 2018</h2>
@@ -202,7 +202,7 @@ should be listed in the changelog upon commit though. Thanks. -->
 		<li class='tweak'>Added collapsible m39 stock to requisitions. This stock can collapse in on itself removing most of the side-effects.</li>
 		<li class='tweak'>Removed bonus damage to point blank from any weapon unless target is lying or unconscious. Greatly increased pointblank damage to lying or unconscious targets.</li>
 		<li class='tweak'>Reduced upfront buckshot damage significantly. Greatly reduced it's damage falloff and scatter of secondary bullets.</li>
-		<li class='tweak'>Increased flechette armor penetration by a small amount. Increased flechette damage by a small amount.</li>		
+		<li class='tweak'>Increased flechette armor penetration by a small amount. Increased flechette damage by a small amount.</li>
 		<li class='tweak'>Increased vertical grip's and supressor's accuracy bonus.</li>
 		<li class='tweak'>Stock Crate in cargo now includes a single M39 Paratrooper's stock.</li>
 		<li class='tweak'>HPR crate now has 2 HPRs for the same price.</li>
@@ -892,8 +892,8 @@ should be listed in the changelog upon commit though. Thanks. -->
 	</ul>
 	<h3 class='author'>Deanthelis updated:</h3>
 	<ul class='changes bgimages16'>
-		<li class='tweak'>Zombies can no longer be de-limbed by anything but brute force, i.e. shooting or hitting the limb. Predaliens can no longer take trophies from zombies.</li>
-		<li class='tweak'>Facehuggers cannot be placed directly on zombies by xenomorphs nor will they jump out of eggs, resin holes, or otherwise leap toward a zombie. Facehuggers treat zombies as though they do not exist.</li>
+		<li class='tweak'>Zombies can no longer be de-limbed by anything but brute force, i.e. shooting or hitting the limb. Predaliens can no longer take trophies from husks.</li>
+		<li class='tweak'>Facehuggers cannot be placed directly on husks by xenomorphs nor will they jump out of eggs, resin holes, or otherwise leap toward a husk. Facehuggers treat husks as though they do not exist.</li>
 		<li class='tweak'>Tweaked telebaton damage. Synths will have to try harder to kill things.</li>
 		<li class='bugfix'>RPG rockets now ignore barricades, making them safe to use on defense.</li>
 		<li class='bugfix'>Fixed crates moving when hit by thrown objects.</li>
@@ -1437,7 +1437,7 @@ Whiskey Outpost will NOT have Marine Law; HOWEVER, being a dick will get you ban
 		<li class='bugfix'>When a marine on the defensive side of a barricade clicks the barricade when shooting, the projectile will no longer hit the barricade but pass through it since you almost never want to shoot your own barricade.</li>
 		<li class='bugfix'>Observers can now examine the destination of a xeno tunnel.</li>
 		<li class='tweak'>Tweak to squad assignment system. You now always get your prefered squad unless you're playing a special role and the prefered squad has filled all the slots for that role already. Players with no squad preference now get first placed in a squad truly randomly but we then check whether there's no significant imbalance between squads and only switch squad if that is the case.</li>
-		<li class='bugfix'>Fixes zombies appearing in the list when using "Follow Human" verb.</li>
+		<li class='bugfix'>Fixes husks appearing in the list when using "Follow Human" verb.</li>
 		<li class='bugfix'>Fixes non MP being able to catch thrown stunbatons without getting zapped.</li>
 		<li class='bugfix'>Fixes marine being able to dismantle barricades with acid on them to save them.</li>
 		<li class='bugfix'>Fixes inconsistency with corrosive acid on plasteel barricade, and framed window vs window frame.</li>
@@ -1873,7 +1873,7 @@ Whiskey Outpost will NOT have Marine Law; HOWEVER, being a dick will get you ban
 		<li class='rscadd'>Added many new methods for lighting cigars and cigarettes, my two favourites are electrified airlocks and burning bodies.</li>
 		<li class='rscadd'>Fire extinguishers now put out cigars and cigarettes.</li>
 		<li class='bugfix'>Fixed issue with facehuggers never detaching somethings.</li>
-		<li class='bugfix'>Facehuggers no longer attach to zombies.</li>
+		<li class='bugfix'>Facehuggers no longer attach to husks.</li>
 	</ul>
 </div>
 
