--- a/html/changelogs/changelog20181.html
+++ b/html/changelogs/changelog20181.html
@@ -893,7 +893,7 @@ should be listed in the changelog upon commit though. Thanks. -->
 	<h3 class='author'>Deanthelis updated:</h3>
 	<ul class='changes bgimages16'>
 		<li class='tweak'>Zombies can no longer be de-limbed by anything but brute force, i.e. shooting or hitting the limb. Predaliens can no longer take trophies from husks.</li>
-		<li class='tweak'>Facehuggers cannot be placed directly on husks by xenomorphs nor will they jump out of eggs, resin holes, or otherwise leap toward a husk. Facehuggers treat husks as though they do not exist.</li>
+		<li class='tweak'>Facehuggers cannot be placed directly on husks by xenomorphs nor will they jump out of eggs, resin holes, or otherwise leap toward a husk. Facehuggers treat zombies as though they do not exist.</li>
 		<li class='tweak'>Tweaked telebaton damage. Synths will have to try harder to kill things.</li>
 		<li class='bugfix'>RPG rockets now ignore barricades, making them safe to use on defense.</li>
 		<li class='bugfix'>Fixed crates moving when hit by thrown objects.</li>
