--- a/html/changelogs/changelog2017.html
+++ b/html/changelogs/changelog2017.html
@@ -600,7 +600,7 @@ should be listed in the changelog upon commit though. Thanks. -->
 	<ul class='changes bgimages16'>
 		<li class='rscadd'>Zombie Mode Added (with a lot of help from Phil)</li>
 		<li class='rscadd'>Mode still needs a LOT of staff input (spawning the husks, setting the round up, etc).</li>
-		<li class='rscadd'>The infection CAN be used in any-game mode, but Infection Mode is the only one that will allow a "husk victory".</li>
+		<li class='rscadd'>The infection CAN be used in any-game mode, but Infection Mode is the only one that will allow a "zombies victory".</li>
 		<li class='rscadd'>There IS a cure.  It has to be spawned in by admins/cent-com.</li>
 	</ul>
 </div>
