--- a/html/changelogs/changelog20181.html
+++ b/html/changelogs/changelog20181.html
@@ -1873,7 +1873,7 @@ Whiskey Outpost will NOT have Marine Law; HOWEVER, being a dick will get you ban
 		<li class='rscadd'>Added many new methods for lighting cigars and cigarettes, my two favourites are electrified airlocks and burning bodies.</li>
 		<li class='rscadd'>Fire extinguishers now put out cigars and cigarettes.</li>
 		<li class='bugfix'>Fixed issue with facehuggers never detaching somethings.</li>
-		<li class='bugfix'>Facehuggers no longer attach to husks.</li>
+		<li class='bugfix'>Facehuggers no longer attach to zombies.</li>
 	</ul>
 </div>
 
