--- a/html/changelogs/changelog20181.html
+++ b/html/changelogs/changelog20181.html
@@ -1437,7 +1437,7 @@ Whiskey Outpost will NOT have Marine Law; HOWEVER, being a dick will get you ban
 		<li class='bugfix'>When a marine on the defensive side of a barricade clicks the barricade when shooting, the projectile will no longer hit the barricade but pass through it since you almost never want to shoot your own barricade.</li>
 		<li class='bugfix'>Observers can now examine the destination of a xeno tunnel.</li>
 		<li class='tweak'>Tweak to squad assignment system. You now always get your prefered squad unless you're playing a special role and the prefered squad has filled all the slots for that role already. Players with no squad preference now get first placed in a squad truly randomly but we then check whether there's no significant imbalance between squads and only switch squad if that is the case.</li>
-		<li class='bugfix'>Fixes husks appearing in the list when using "Follow Human" verb.</li>
+		<li class='bugfix'>Fixes zombies appearing in the list when using "Follow Human" verb.</li>
 		<li class='bugfix'>Fixes non MP being able to catch thrown stunbatons without getting zapped.</li>
 		<li class='bugfix'>Fixes marine being able to dismantle barricades with acid on them to save them.</li>
 		<li class='bugfix'>Fixes inconsistency with corrosive acid on plasteel barricade, and framed window vs window frame.</li>
