--- a/html/changelogs/changelog20182.html
+++ b/html/changelogs/changelog20182.html
@@ -1041,7 +1041,7 @@
 		</ul>
 		<h3 class='author'>Suicidalpickles updated:</h3>
 		<ul class='changes bgimages16'>
-			<li class='imageadd'>Replaced zombies sprites with /tg/Station counterparts.</li>
+			<li class='imageadd'>Replaced zombie sprites with /tg/Station counterparts.</li>
 		</ul>
 
 
